--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Natural Instructions: Benchmarking Generalization to New Tasks from Natural Language Instructions</b> <br /> 
+with Swaroop Mishra and others <br /> 
+arXiv, 2021 <br /> 
+<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="https://github.com/allenai/natural-instructions">Data</a></p>
+</li>
+</ul>
+<ul>
+<li><p><b>GooAQ: Open Question Answering with Diverse Answer Types</b> <br /> 
+with Amos Ng and others <br /> 
+arXiv, 2021 <br /> 
+<a href="https://arxiv.org/abs/2104.08727">Paper</a>, <a href="https://github.com/allenai/gooaq">Data</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models</b> <br /> 
 with Tushar Khot and others <br /> 
 NAACL-HLT, 2021 <br /> 
@@ -416,7 +430,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-17 21:39:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-04-19 18:17:27 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
