--- a/index.html
+++ b/index.html
@@ -359,18 +359,13 @@ BSc Thesis, Tehran Polytechnic, 2012 (in Persian.) <br />
 </li>
 <li><p><a href="https://freuder.wordpress.com/pthg-19-the-third-workshop-on-progress-towards-the-holy-grail/">The Third Workshop on Progress Towards the Holy Grail</a>, <a href="files/2019_talk_holy_grail_workshop/daniel-kh-holy-grail-workshop-2019.pdf">In Pursuit of the Holy Grail of Natural Language Understanding: Past, Present, and Future</a>, 2019.</p>
 </li>
-<li><p>Carnegie Mellon University, <a href="files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019. </p>
-</li>
-<li><p>New York University, NLP Seminar, <a href="https://docs.google.com/presentation/d/1KZxE0_LANeRYaShGP2cjvbRTaR2V7F8N36xQ8004r2o/edit?usp=sharing">Reasoning-Driven Question Answering</a>, 2018. </p>
+<li><p>Carnegie Mellon University, <a href="files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019. 
+</p>
 </li>
 <li><p>Stanford University, NLP Seminar, <a href="https://docs.google.com/presentation/d/11QnDUYXB9q06HIyZxmHcb1BrwcdStjjHPNOC3AnlTsc/edit?usp=sharing">Reasoning-Driven Question Answering</a>, 2018. </p>
 </li>
 <li><p>Mid-Atlantic Student Colloquium on Speech, Language and Learning, <a href="https://docs.google.com/presentation/d/1KmGQfbeUitZOum4s6cPTqwuJJfTdxlQMeV_Go2_8Jz0/edit?usp=sharing">Abductive Reasoning on Natural Language Questions as
 Global Reasoning over Semantic Abstractions</a>, 2018.</p>
-</li>
-<li><p>Microsoft Research, Cambridge (UK), <a href="files/2013_2014_demosaicing/2013_RTF_demosaicing_1.pptx">Pattern-independent Demosaicing</a>, 2013.</p>
-</li>
-<li><p>Tarbiat Modares University, <a href="files/2010_Wavelet/26-1.ppt">Haar wavelet for function approximation and solving ordinary differential equations</a>, 2010.</p>
 </li>
 </ul>
 <p><h2 id="teaching">Teaching</h2></p>
@@ -400,27 +395,27 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <h2>Past Projects and Resources </h2>
 <ul>
-<li><p>OpenEval, an open-source evaluation framework for AI applications, UIUC (2015-2016), <a href="files/2015_openeval/openeval_poster.pdf">Poster</a></p>
+<li><p>OpenEval, an open-source evaluation framework for AI applications, 2015, <a href="files/2015_openeval/openeval_poster.pdf">Poster</a></p>
 </li>
-<li><p><a href="files/2015_knowledge_representation/knowledge_representation_writeup.pdf">Knowledge Representation: How far we have come?</a>, <a href="files/2015_knowledge_representation/2015_knowledge_representation2.pptx">PPTX</a> <a href="files/2015_knowledge_representation/2015_knowledge_representation2.pdf">PDF</a> 2015 </p>
+<li><p><a href="files/2015_knowledge_representation/knowledge_representation_writeup.pdf">Knowledge Representation: How far we have come?</a>, 2015, <a href="files/2015_knowledge_representation/2015_knowledge_representation2.pdf">PDF</a> </p>
 </li>
-<li><p>Modelling and Control of Ball-on-Plate System, 2011, ( <a href="BallOnPlateControl.html">ProjectPage, documentation and sources</a>)</p>
+<li><p>Modelling and Control of Ball-on-Plate System, 2011, (<a href="BallOnPlateControl.html">details</a>)</p>
 </li>
 <li><p><a href="files/2011_RVM_Facial_Feature/2011_internship_report.pdf">Facial Feature Tracking, Extraction and Reduction</a>, 2011 </p>
 </li>
-<li><p><a href="files/2010_Wavelet/26.pdf">Haar wavelet for function approximation and solving ordinary differential equations</a></p>
+<li><p><a href="files/2010_Wavelet/26.pdf">Haar wavelet for function approximation and solving ordinary differential equations</a>,  <a href="files/2010_Wavelet/26-1.ppt">slides</a></p>
 </li>
-<li><p><a href="files/2010_GeneticCombinationalCircuits/23.pdf">Design and Optimizing Digital Combinational Logic Circuits Using Genetic Algorithm</a>, <a href="GACombinatorial.html">Source and demo</a></p>
+<li><p><a href="files/2010_GeneticCombinationalCircuits/23.pdf">Design and Optimizing Digital Combinational Logic Circuits Using Genetic Algorithm</a>, <a href="GACombinatorial.html">details</a></p>
 </li>
 <li><p><a href="http://cpp.aut.ac.ir/">C++ Programming and Numerical Methods</a>, 2009 (in Persian.) <br /></p>
 </li>
-<li><p>&ldquo;Introduction to computers and programming using C++&rdquo;, 2008. <a href="files/2008_BLIF/bookBLIF.pdf">[English book by Alex Bielajew]</a> <a href="files/2008_BLIF/CppTutorialBLIF.pdf">[PDF of Persian translation]</a>  </p>
+<li><p>&ldquo;Introduction to computers and programming using C++&rdquo;, 2008, <a href="files/2008_BLIF/bookBLIF.pdf">[English book by Alex Bielajew]</a> <a href="files/2008_BLIF/CppTutorialBLIF.pdf">[PDF of Persian translation]</a>  </p>
 </li>
-<li><p>Generating Electricity with Speed Bumps, 9th Kharazmi festival, 2007, Tehran, Iran. <a href="files/2006_EPSEF/25.pdf">PDF-PERSIAN</a></p>
+<li><p>Generating Electricity with Speed Bumps, 2006, <a href="files/2006_EPSEF/25.pdf">PDF-Persian</a></p>
 </li>
-<li><p>Heuristics 2D Soccer Simulation Team Description Paper; Iranian students&rsquo; soccer simulation competitions, 2007, Tehran, Iran. <a href="files/Robocup/Hadaf06_TDP.pdf">[PDF-Persian]</a></p>
+<li><p>2D Soccer Simulation, 2007, <a href="files/Robocup/Hadaf06_TDP.pdf">[PDF-Persian]</a></p>
 </li>
-<li><p><a href="files/MLbook/">Machine Learning (Tom Mitchell), in Persian, translation by Mohammad Nokhbeh Zaeeem</a> (<span lang="ko" xml:lang="ko">یادگیری ماشین-محمد نخبه زعیم</span>) </p>
+<li><p><a href="files/MLbook/">Machine Learning (Tom Mitchell), translation by M. Nokhbeh Zaeeem</a> (<span lang="ko" xml:lang="ko">یادگیری ماشین-محمد نخبه زعیم</span>) </p>
 </li>
 </ul>
 <h2>Notes  </h2>
@@ -430,7 +425,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-04-30 12:45:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-04 09:41:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
