--- a/index.html
+++ b/index.html
@@ -399,33 +399,28 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 <li><p><a href="files/2015_knowledge_representation/knowledge_representation_writeup.pdf">Knowledge Representation: How far we have come?</a>, 2015, <a href="files/2015_knowledge_representation/2015_knowledge_representation2.pdf">PDF</a> </p>
 </li>
-<li><p>Modelling and Control of Ball-on-Plate System, 2011, (<a href="BallOnPlateControl.html">details</a>)</p>
+<li><p>Modeling and control of ball-on-plate system, 2011, (<a href="BallOnPlateControl.html">details</a>)</p>
 </li>
-<li><p><a href="files/2011_RVM_Facial_Feature/2011_internship_report.pdf">Facial Feature Tracking, Extraction and Reduction</a>, 2011 </p>
+<li><p><a href="files/2011_RVM_Facial_Feature/2011_internship_report.pdf">Facial feature extraction and tracking</a>, 2011 </p>
 </li>
-<li><p><a href="files/2010_Wavelet/26.pdf">Haar wavelet for function approximation and solving ordinary differential equations</a>,  <a href="files/2010_Wavelet/26-1.ppt">slides</a></p>
+<li><p><a href="files/2010_Wavelet/26.pdf">Wavelet approximation for solving differential equations</a>,  <a href="files/2010_Wavelet/26-1.ppt">slides</a></p>
 </li>
-<li><p><a href="files/2010_GeneticCombinationalCircuits/23.pdf">Design and Optimizing Digital Combinational Logic Circuits Using Genetic Algorithm</a>, <a href="GACombinatorial.html">details</a></p>
+<li><p><a href="files/2010_GeneticCombinationalCircuits/23.pdf">Combinational logic circuits using genetic algorithm</a>, <a href="GACombinatorial.html">details</a></p>
 </li>
-<li><p><a href="http://cpp.aut.ac.ir/">C++ Programming and Numerical Methods</a>, 2009 (in Persian.) <br /></p>
+<li><p><a href="http://cpp.aut.ac.ir/">C++ programming and numerical methods</a>, 2009 (in Persian) <br /></p>
 </li>
-<li><p>&ldquo;Introduction to computers and programming using C++&rdquo;, 2008, <a href="files/2008_BLIF/bookBLIF.pdf">[English book by Alex Bielajew]</a> <a href="files/2008_BLIF/CppTutorialBLIF.pdf">[PDF of Persian translation]</a>  </p>
+<li><p>Introduction to computers and programming using C++, 2008, <a href="files/2008_BLIF/CppTutorialBLIF.pdf">PDF-Persian</a>  </p>
 </li>
-<li><p>Generating Electricity with Speed Bumps, 2006, <a href="files/2006_EPSEF/25.pdf">PDF-Persian</a></p>
+<li><p>2D Soccer Simulation, 2007, <a href="files/Robocup/Hadaf06_TDP.pdf">PDF-Persian</a></p>
 </li>
-<li><p>2D Soccer Simulation, 2007, <a href="files/Robocup/Hadaf06_TDP.pdf">[PDF-Persian]</a></p>
+<li><p>Generating electricity with speed bumps, 2006, <a href="files/2006_EPSEF/25.pdf">PDF-Persian</a></p>
 </li>
-<li><p><a href="files/MLbook/">Machine Learning (Tom Mitchell), translation by M. Nokhbeh Zaeeem</a> (<span lang="ko" xml:lang="ko">یادگیری ماشین-محمد نخبه زعیم</span>) </p>
-</li>
-</ul>
-<h2>Notes  </h2>
-<ul>
-<li><p><a href="learn.html">&ldquo;Learning Algorithms&ndash;or blend of computation and statistics&rdquo;, a collection of notes</a> </p>
+<li><p>Tom Mitchell's <a href="files/MLbook/">&ldquo;Machine Learning&rdquo;, translated by M. Nokhbeh Zaeeem</a> (<span lang="ko" xml:lang="ko">یادگیری ماشین-محمد نخبه زعیم</span>) </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-04 09:41:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-04 10:09:36 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
