--- a/index.html
+++ b/index.html
@@ -88,10 +88,17 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Ethical-Advice Taker: Do Language Models Understand Natural Language Interventions?</b> <br /> 
+Jieyu Zhao, Daniel Khashabi, Tushar Khot, Ashish Sabharwal and Kai-Wei Chang <br /> 
+ACL-IJCNLP, 2021 <br /> 
+<a href="?">Paper</a>, <a href="https://github.com/allenai/ethical-interventions">Data &amp; Code</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Natural Instructions: Benchmarking Generalization to New Tasks from Natural Language Instructions</b> <br /> 
 Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
 arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="https://github.com/allenai/natural-instructions">Data</a>, <a href="x">Demo</a></p>
+<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a></p>
 </li>
 </ul>
 <ul>
@@ -123,17 +130,18 @@ arXiv, 2021 <br />
 </li>
 </ul>
 <ul>
+<li><p><b>ParsiNLU: A Suite of Language Understanding Challenges for Persian</b> <br /> 
+Daniel Khashabi, Arman Cohan, Siamak Shakeri, et al. <br /> 
+
+arXiv, 2020 <br /> 
+<a href="https://arxiv.org/abs/2012.06154">Paper</a>, <a href="https://github.com/persiannlp/parsiglue/">Code &amp; Data</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Did Aristotle Use a Laptop? A Question Answering Benchmark with Implicit Reasoning Strategies</b> <br /> 
 Mor Geva, Daniel Khashabi, Elad Segal, Tushar Khot, Dan Roth and Jonathan Berant <br /> 
 TACL, 2021 <br /> 
 <a href="https://arxiv.org/abs/2101.02235">Paper</a>, <a href="https://allenai.org/data/strategyqa">Dataset</a>, <a href="https://leaderboard.allenai.org/strategyqa/submissions/public">Leaderboard</a>, <a href="https://docs.google.com/presentation/d/1lm4S7YE1RHG4ZtMMXWkPUKVcqKI-z0aDAbAHSh16KNQ/edit?usp=sharing">Slides</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>ParsiNLU: A Suite of Language Understanding Challenges for Persian</b> <br /> 
-Daniel Khashabi, Arman Cohan, Siamak Shakeri, et al. <br /> 
-arXiv, 2020 <br /> 
-<a href="https://arxiv.org/abs/2012.06154">Paper</a>, <a href="https://github.com/persiannlp/parsiglue/">Code &amp; Data</a></p>
 </li>
 </ul>
 <ul>
@@ -420,7 +428,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-04 10:09:36 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-22 12:56:42 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
