--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ arXiv, 2021 <br />
 </ul>
 <ul>
 <li><p><b>GooAQ: Open Question Answering with Diverse Answer Types</b> <br /> 
-Daniel Khashabi, Amos Ng, Tushar Khot, Ashish Sabharwal and Hannaneh Hajishirzi <br /> 
+Daniel Khashabi, Amos Ng, Tushar Khot, Ashish Sabharwal, Hannaneh Hajishirzi and Chris Callison-Burch <br /> 
 arXiv, 2021 <br /> 
 <a href="https://arxiv.org/abs/2104.08727">Paper</a>, <a href="https://github.com/allenai/gooaq">Data</a></p>
 </li>
@@ -428,7 +428,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-22 12:56:42 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-27 13:33:10 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
