--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ ACL-IJCNLP, 2021 <br />
 <li><p><b>Natural Instructions: Benchmarking Generalization to New Tasks from Natural Language Instructions</b> <br /> 
 Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
 arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a></p>
+<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -110,9 +110,9 @@ arXiv, 2021 <br />
 </ul>
 <ul>
 <li><p><b>Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models</b> <br /> 
-Tushar Khot, Daniel Khashabi, Kyle Richardson, Ashish Sabharwal and Perer Clark <br /> 
+Tushar Khot, Daniel Khashabi, Kyle Richardson, Ashish Sabharwal and Peter Clark <br /> 
 NAACL-HLT, 2021 <br /> 
-<a href="https://arxiv.org/abs/2009.00751">Paper</a>, <a href="https://github.com/allenai/modularqa">Resources</a>, <a href="https://modularqa-demo.apps.allenai.org/">Demo</a></p>
+<a href="https://arxiv.org/abs/2009.00751">Paper</a>, <a href="https://github.com/allenai/modularqa">Resources</a>, <a href="https://modularqa-demo.apps.allenai.org/">Demo</a>, <a href="files/2021_modularqa/TMNs_NAACL_final.pptx">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -428,7 +428,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-27 13:33:10 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-28 14:26:47 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
