--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <li><p><b>Ethical-Advice Taker: Do Language Models Understand Natural Language Interventions?</b> <br /> 
 Jieyu Zhao, Daniel Khashabi, Tushar Khot, Ashish Sabharwal and Kai-Wei Chang <br /> 
 ACL-IJCNLP, 2021 <br /> 
-<a href="?">Paper</a>, <a href="https://github.com/allenai/ethical-interventions">Data &amp; Code</a></p>
+<a href="files/2021_lei/ethical_interventions_acl_2021.pdf">Paper</a>, <a href="https://github.com/allenai/ethical-interventions">Data &amp; Code</a></p>
 </li>
 </ul>
 <ul>
@@ -428,7 +428,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-28 14:26:47 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-06-02 07:15:31 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
