--- a/index.html
+++ b/index.html
@@ -88,9 +88,16 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>GooAQ: Open Question Answering with Diverse Answer Types</b> <br /> 
+Daniel Khashabi, Amos Ng, Tushar Khot, Ashish Sabharwal, Hannaneh Hajishirzi and Chris Callison-Burch <br /> 
+EMNLP - Findings, 2021 <br /> 
+<a href="https://arxiv.org/abs/2104.08727">Paper</a>, <a href="https://github.com/allenai/gooaq">Data</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Ethical-Advice Taker: Do Language Models Understand Natural Language Interventions?</b> <br /> 
 Jieyu Zhao, Daniel Khashabi, Tushar Khot, Ashish Sabharwal and Kai-Wei Chang <br /> 
-ACL-IJCNLP, 2021 <br /> 
+ACL-IJCNLP - Findings, 2021 <br /> 
 <a href="https://arxiv.org/abs/2106.01465">Paper</a>, <a href="https://github.com/allenai/ethical-interventions">Data &amp; Code</a></p>
 </li>
 </ul>
@@ -99,13 +106,6 @@ ACL-IJCNLP, 2021 <br />
 Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
 arXiv, 2021 <br /> 
 <a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>GooAQ: Open Question Answering with Diverse Answer Types</b> <br /> 
-Daniel Khashabi, Amos Ng, Tushar Khot, Ashish Sabharwal, Hannaneh Hajishirzi and Chris Callison-Burch <br /> 
-arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2104.08727">Paper</a>, <a href="https://github.com/allenai/gooaq">Data</a></p>
 </li>
 </ul>
 <ul>
@@ -427,7 +427,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-13 11:23:15 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-09-01 18:47:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
