--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@ ACL-IJCNLP - Findings, 2021 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>Natural Instructions: Benchmarking Generalization to New Tasks from Natural Language Instructions</b> <br /> 
+<li><p><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions</b> <br /> 
 Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
 arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a></p>
+<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="https://github.com/allenai/natural-instructions-expansion/">Data2</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -427,7 +427,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-01 18:47:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-09-07 10:36:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
