--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Reframing Instructional Prompts to GPT<i>k</i>'s Language</b> <br /> 
+Swaroop Mishra, Daniel Khashabi, Chitta Baral, Yejin Choi and Hannaneh Hajishirzi <br /> 
+arXiv, 2021 <br /> 
+<a href="https://arxiv.org/abs/2109.07830">Paper</a>, <a href="https://github.com/allenai/reframing">Code</a></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions</b> <br /> 
+Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
+arXiv, 2021 <br /> 
+<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="https://github.com/allenai/natural-instructions-expansion/">Data2</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>GooAQ: Open Question Answering with Diverse Answer Types</b> <br /> 
 Daniel Khashabi, Amos Ng, Tushar Khot, Ashish Sabharwal, Hannaneh Hajishirzi and Chris Callison-Burch <br /> 
 EMNLP - Findings, 2021 <br /> 
@@ -99,13 +113,6 @@ EMNLP - Findings, 2021 <br />
 Jieyu Zhao, Daniel Khashabi, Tushar Khot, Ashish Sabharwal and Kai-Wei Chang <br /> 
 ACL-IJCNLP - Findings, 2021 <br /> 
 <a href="https://arxiv.org/abs/2106.01465">Paper</a>, <a href="https://github.com/allenai/ethical-interventions">Data &amp; Code</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions</b> <br /> 
-Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
-arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="https://github.com/allenai/natural-instructions-expansion/">Data2</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -427,7 +434,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-07 10:36:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-09-17 13:47:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
