--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ arXiv, 2021 <br />
 <li><p><b>GooAQ: Open Question Answering with Diverse Answer Types</b> <br /> 
 Daniel Khashabi, Amos Ng, Tushar Khot, Ashish Sabharwal, Hannaneh Hajishirzi and Chris Callison-Burch <br /> 
 EMNLP - Findings, 2021 <br /> 
-<a href="https://arxiv.org/abs/2104.08727">Paper</a>, <a href="https://github.com/allenai/gooaq">Data</a></p>
+<a href="https://arxiv.org/abs/2104.08727">Paper</a>, <a href="https://github.com/allenai/gooaq">Data</a>, <a href="files/2021_gooaq/gooaq_talk_emnlp_findings.pdf">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -434,7 +434,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-17 13:47:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-11 10:52:41 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
