--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Learning to Solve Complex Tasks by Talking to Agents</b> <br /> 
+Tushar Khot, Kyle Richardson, Daniel Khashabi and Ashish Sabharwal <br /> 
+arXiv <br /> 
+<a href="https://arxiv.org/abs/2110.08542">Paper</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Reframing Instructional Prompts to GPT<i>k</i>'s Language</b> <br /> 
 Swaroop Mishra, Daniel Khashabi, Chitta Baral, Yejin Choi and Hannaneh Hajishirzi <br /> 
 arXiv, 2021 <br /> 
@@ -140,7 +147,7 @@ arXiv, 2021 <br />
 <li><p><b>ParsiNLU: A Suite of Language Understanding Challenges for Persian</b> <br /> 
 Daniel Khashabi, Arman Cohan, Siamak Shakeri et al. <br /> 
 TACL, 2021 <br /> 
-<a href="https://arxiv.org/abs/2012.06154">Paper</a>, <a href="https://github.com/persiannlp/parsiglue/">Code &amp; Data</a></p>
+<a href="https://arxiv.org/abs/2012.06154">Paper</a>, <a href="https://github.com/persiannlp/parsiglue/">Code &amp; Data</a>, <a href="https://docs.google.com/presentation/d/1D9tO052D86J_OGiFV-VRoeWZ-kaEyT0nwKVVz4z0SLc/edit?usp=sharing">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -434,7 +441,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-11 10:52:41 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-18 20:18:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
