--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <ul>
 <li><p><b>Learning to Solve Complex Tasks by Talking to Agents</b> <br /> 
 Tushar Khot, Kyle Richardson, Daniel Khashabi and Ashish Sabharwal <br /> 
-arXiv <br /> 
+arXiv, 2021 <br /> 
 <a href="https://arxiv.org/abs/2110.08542">Paper</a></p>
 </li>
 </ul>
@@ -441,7 +441,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-18 20:18:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-18 20:21:56 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
