--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ How can we enable machines to communicate the <i>reasons</i> behind their findin
 </ul>
 <ul>
 <li><p><b>Generality enabled by the representation of task-independent “incidental” signals:</b> 
-How can we utilize the the cheap signals available in the wild (web data or phyisical environment) to enriching representations that support stronger model generalization. <br />
+How can we utilize cheap signals available in the wild (web data or physical environment) to enrich representations that support stronger model generalization. <br />
 <i>Papers:</i></p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2005.04304">Temporal Common Sense Acquisition with Minimal Supervision</a> (ACL&rsquo;20)</p>
@@ -100,7 +100,7 @@ How can we utilize the the cheap signals available in the wild (web data or phyi
 </ul>
 <ul>
 <li><p><b>AI + Society:</b> 
-What are the algorithmic biases in our models and how can we alleviate them? How do the models contribue to echo chambers (and our growing socio-political divisions) and how can address these issue? <br />
+What are the algorithmic biases in our models and how can we alleviate them? How do the models contribute to echo chambers (and our growing socio-political divisions) and how can address these issues? <br />
 <i>Papers:</i></p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2010.02428">UnQovering Stereotyping Biases via Underspecified Questions</a> (EMNLP&rsquo;20)</p>
@@ -475,7 +475,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-14 22:08:33 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-14 22:11:14 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
