--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Daniel Khashabi</div>
 <div class="menu-item"><a href="CV_daniel.pdf">CV</a></div>
-<div class="menu-item"><a href="index.html#about">Themes</a></div>
+<div class="menu-item"><a href="index.html#themes">Themes</a></div>
 <div class="menu-item"><a href="index.html#publication">Publication</a></div>
 <div class="menu-item"><a href="index.html#talks">Talks/Slides</a></div>
 <div class="menu-item"><a href="index.html#teaching">Teaching</a></div>
@@ -48,7 +48,7 @@ Allen Institute for Artificial Intelligence  <br />
 
 </p>
 </div></div>
-<p><h2 id="themes">About</h2>
+<p><h2 id="about">About</h2>
 I am post-doctoral researcher  at Allen Institute for AI, Seattle. I am formally member of the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
 Prior to this, I was a doctoral student at Computer and Information Sciences at the University of Pennsylvania (2017-2019) and at the University of Illinois, Urbana-Champaign (2012-2016), under <a href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. 
 I have a bachelor's degree from Amirkabir University of Technology, Tehran Polytechnic (2008-2012). I was greatly fortunate to work with <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&amp;hl=en">Prof. Hamid Sheikhzadeh</a> during my undergraduate studies.  </p>
@@ -475,7 +475,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-14 22:11:14 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-15 08:03:41 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
