--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <li><p><b>Time Waits for No One! Analysis and Challenges of Temporal Misalignment</b> <br /> 
 Kelvin Luu, Daniel Khashabi, Suchin Gururangan, Karishma Mandyam and Noah A. Smith <br /> 
 arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2111.07408">Paper</a></p>
+<a href="https://arxiv.org/abs/2111.07408">Paper</a>, <a href="https://github.com/Kel-Lu/time-waits-for-no-one">Data</a></p>
 </li>
 </ul>
 <ul>
@@ -475,7 +475,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-16 11:12:02 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-16 13:20:24 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
