--- a/index.html
+++ b/index.html
@@ -410,14 +410,12 @@ BSc Thesis, Tehran Polytechnic, 2012 (in Persian.) <br />
 </ul>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
-<li><p>Google AI, <a href="files/2021_google_talk/google-talk-march-2021.pdf">Broadening the Scope of Machine Comprehension</a>, 2021.</p>
-</li>
-<li><p><a href="https://freuder.wordpress.com/pthg-19-the-third-workshop-on-progress-towards-the-holy-grail/">The Third Workshop on Progress Towards the Holy Grail</a>, <a href="files/2019_talk_holy_grail_workshop/daniel-kh-holy-grail-workshop-2019.pdf">In Pursuit of the Holy Grail of Natural Language Understanding: Past, Present, and Future</a>, 2019.</p>
-</li>
-<li><p>Carnegie Mellon University, <a href="files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019. 
+<li><p>Google AI, <a href="files/2021_google_talk/google-talk-march-2021.pdf">Broadening the Scope of Machine Comprehension</a>, 2021.
 </p>
 </li>
-<li><p>Stanford University, NLP Seminar, <a href="https://docs.google.com/presentation/d/11QnDUYXB9q06HIyZxmHcb1BrwcdStjjHPNOC3AnlTsc/edit?usp=sharing">Reasoning-Driven Question Answering</a>, 2018. </p>
+<li><p>Carnegie Mellon University, <a href="files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019. 
+
+</p>
 </li>
 <li><p>Mid-Atlantic Student Colloquium on Speech, Language and Learning, <a href="https://docs.google.com/presentation/d/1KmGQfbeUitZOum4s6cPTqwuJJfTdxlQMeV_Go2_8Jz0/edit?usp=sharing">Abductive Reasoning on Natural Language Questions as
 Global Reasoning over Semantic Abstractions</a>, 2018.</p>
@@ -448,34 +446,9 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <li><p>Teaching Assistant: &ldquo;Introduction to Computers and Programming(C++)&rdquo;, Instructor: Dr.Hassan Taheri (Spring, 2011). <br /></p>
 </li>
 </ul>
-<h2>Past Projects and Resources </h2>
-<ul>
-<li><p>OpenEval, an open-source evaluation framework for AI applications, 2015, <a href="files/2015_openeval/openeval_poster.pdf">Poster</a></p>
-</li>
-<li><p><a href="files/2015_knowledge_representation/knowledge_representation_writeup.pdf">Knowledge Representation: How far we have come?</a>, 2015, <a href="files/2015_knowledge_representation/2015_knowledge_representation2.pdf">PDF</a> </p>
-</li>
-<li><p>Modeling and control of ball-on-plate system, 2011, (<a href="BallOnPlateControl.html">details</a>)</p>
-</li>
-<li><p><a href="files/2011_RVM_Facial_Feature/2011_internship_report.pdf">Facial feature extraction and tracking</a>, 2011 </p>
-</li>
-<li><p><a href="files/2010_Wavelet/26.pdf">Wavelet approximation for solving differential equations</a>,  <a href="files/2010_Wavelet/26-1.ppt">slides</a></p>
-</li>
-<li><p><a href="files/2010_GeneticCombinationalCircuits/23.pdf">Combinational logic circuits using genetic algorithm</a>, <a href="GACombinatorial.html">details</a></p>
-</li>
-<li><p><a href="http://cpp.aut.ac.ir/">C++ programming and numerical methods</a>, 2009 (in Persian) <br /></p>
-</li>
-<li><p>Introduction to computers and programming using C++, 2008, <a href="files/2008_BLIF/CppTutorialBLIF.pdf">PDF-Persian</a>  </p>
-</li>
-<li><p>2D Soccer Simulation, 2007, <a href="files/Robocup/Hadaf06_TDP.pdf">PDF-Persian</a></p>
-</li>
-<li><p>Generating electricity with speed bumps, 2006, <a href="files/2006_EPSEF/25.pdf">PDF-Persian</a></p>
-</li>
-<li><p>Tom Mitchell's <a href="files/MLbook/">&ldquo;Machine Learning&rdquo;, translated by M. Nokhbeh Zaeeem</a> (<span lang="ko" xml:lang="ko">یادگیری ماشین-محمد نخبه زعیم</span>) </p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-16 13:20:24 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-19 09:06:13 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
