--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Allen Institute for Artificial Intelligence  <br />
 </p>
 </div></div>
 <p><h2 id="about">About</h2>
-I am post-doctoral researcher  at Allen Institute for AI, Seattle. I am affiliated with the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
+I am a post-doctoral researcher  at Allen Institute for AI, Seattle. I am affiliated with the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
 Prior to this, I was a doctoral student at Computer and Information Sciences at the University of Pennsylvania (2017-2019) and at the University of Illinois, Urbana-Champaign (2012-2016), under <a href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. 
 I have a bachelor's degree from Amirkabir University of Technology, Tehran Polytechnic (2008-2012). I was greatly fortunate to work with <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&amp;hl=en">Prof. Hamid Sheikhzadeh</a> during my undergraduate studies.  </p>
 <p><h2 id="themes">Research Themes</h2></p>
@@ -112,8 +112,15 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 </li>
 </ul>
 <p><h2 id="publication">Publication</h2></p>
-<p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
+<p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
+<ul>
+<li><p><b>Findings of the 2021 Conference on Machine Translation (WMT21)</b> <br /> 
+Farhad Akhbardeh et al.  <br /> 
+WMT, 2021 <br /> 
+<a href="http://www.statmt.org/wmt21/pdf/2021.wmt-1.1.pdf">Paper</a></p>
+</li>
+</ul>
 <ul>
 <li><p><b>Time Waits for No One! Analysis and Challenges of Temporal Misalignment</b> <br /> 
 Kelvin Luu, Daniel Khashabi, Suchin Gururangan, Karishma Mandyam and Noah A. Smith <br /> 
@@ -448,7 +455,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-19 09:06:13 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-29 08:30:35 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
