--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@ Allen Institute for Artificial Intelligence  <br />
 <div class="infoblock">
 <div class="blocktitle"></div>
 <div class="blockcontent">
-<p>I am currently on the academic job market. Please get in touch if you are hiring in the intersection of <i>Natural Language Processing</i>, <i>Artificial Intelligence</i> and <i>Machine Learning</i>. 
-
-</p>
+<p>I am currently on the academic job market. Please get in touch if you are hiring in the intersection of <i>Natural Language Processing</i>, <i>Artificial Intelligence</i> and <i>Machine Learning</i>. <br /> 
+Documents: <a href="files/2021_statements/research_statement_2021.pdf">research statement</a> - <a href="files/2021_statements/teaching_statement_2021.pdf">teaching statement</a> - <a href="files/2021_statements/diversity_statement_2021.pdf">diversity statement</a> -  <a href="files/2021_statements/service_statement_2021.pdf">service statement</a></p>
 </div></div>
 <p><h2 id="about">About</h2>
 I am a post-doctoral researcher  at Allen Institute for AI, Seattle. I am affiliated with the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
@@ -455,7 +454,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-29 08:30:35 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-30 10:49:47 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
