--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ How can we enable machines to communicate the <i>reasons</i> behind their findin
 </ul>
 <ul>
 <li><p><b>Generality enabled by the representation of task-independent “incidental” signals:</b> 
-How can we utilize cheap signals available in the wild (web data or physical environment) to enrich representations that support stronger model generalization. <br />
+How can we utilize cheap signals available in the wild (web data or physical environment) to enrich representations that support stronger model generalization? <br />
 <i>Papers:</i></p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2005.04304">Temporal Common Sense Acquisition with Minimal Supervision</a> (ACL&rsquo;20)</p>
@@ -110,6 +110,13 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <p><h2 id="publication">Publication</h2></p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
+<ul>
+<li><p><b>Promp Waywardness: The Curious Case of Discretized Interpretation of Continuous Prompts</b> <br /> 
+Daniel Khashabi, Shane Lyu, Sewon Min, Lianhui Qin, Kyle Richardson, Sameer Singh, Sean Welleck, Hannaneh Hajishirzi, Tushar Khot, Ashish Sabharwal and Yejin Choi  <br /> 
+aXiv, 2021 <br /> 
+<a href="arxiv.org/abs/2112.08348">Paper</a></p>
+</li>
+</ul>
 <ul>
 <li><p><b>Findings of the 2021 Conference on Machine Translation (WMT21)</b> <br /> 
 Farhad Akhbardeh et al.  <br /> 
@@ -451,7 +458,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-30 11:38:51 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-15 18:28:21 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
