--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <li><p><b>Promp Waywardness: The Curious Case of Discretized Interpretation of Continuous Prompts</b> <br /> 
 Daniel Khashabi, Shane Lyu, Sewon Min, Lianhui Qin, Kyle Richardson, Sameer Singh, Sean Welleck, Hannaneh Hajishirzi, Tushar Khot, Ashish Sabharwal and Yejin Choi  <br /> 
 aXiv, 2021 <br /> 
-<a href="arxiv.org/abs/2112.08348">Paper</a></p>
+<a href="https://arxiv.org/abs/2112.08348">Paper</a></p>
 </li>
 </ul>
 <ul>
@@ -458,7 +458,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-15 18:28:21 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-15 19:47:39 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
