--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><b>NeuroLogic A</b>esque Decoding: Constrained Text Generation with Lookahead Heuristics* <br /> 
+<li><p><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics</b> <br /> 
 Ximing Lu, Sean Welleck, Peter West, Liwei Jiang, Jungo Kasai, Daniel Khashabi, Ronan Le Bras, Lianhui Qin, Youngjae Yu, Rowan Zellers, Noah A. Smith and Yejin Choi  <br /> 
 aXiv, 2021 <br /> 
 <a href="https://arxiv.org/abs/2112.08726">Paper</a></p>
@@ -465,7 +465,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-16 18:15:42 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-16 18:29:44 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
