--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ ACL - Demos, 2019 <br />
 <li><p><b>Seeing Things from a Different Angle: Discovering Diverse Perspectives about Claims</b> <br /> 
 Sihao Chen, Daniel Khashabi, Wenpeng Yin, Chris Callison-Burch and Dan Roth <br /> 
 NAACL, 2019 <br /> 
-<a href="files/2019_perspectrum/2019_perspectrum_naacl.pdf">Paper</a>, <a href="https://cogcomp.org/perspectrum">Dataset</a>, <a href="https://github.com/CogComp/perspectrum">Code</a>, <a href="files/2019_perspectrum/perspectrum-poster-naacl-2019.pdf">Poster</a>, <a href="https://www.youtube.com/watch?v=rOgdaLHIDgE&amp;feature=youtu.be">Video</a> <br /></p>
+<a href="files/2019_perspectrum/2019_perspectrum_naacl.pdf">Paper</a>, <a href="https://cogcomp.org/perspectrum">Dataset</a>, <a href="https://github.com/CogComp/perspectrum">Code</a>, <a href="files/2019_perspectrum/perspectrum-poster-naacl-2019.pdf">Poster</a>, <a href="https://www.youtube.com/watch?v=rOgdaLHIDgE&amp;feature=youtu.be">Video</a>, <a href="files/2019_perspectrum/viz.html">Example Visualization</a> <br /></p>
 </li>
 </ul>
 <ul>
@@ -465,7 +465,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-16 18:29:44 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-31 07:18:08 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
