--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ I have a bachelor's degree from Amirkabir University of Technology, Tehran Polyt
 <p><h2 id="themes">Research Themes</h2></p>
 <p>My research focuses on the computational foundations of <i>intelligent behavior</i>, through the lens of <i>natural language</i>. 
 My goal is to explore the different ways in which we can develop and evaluate systems that understand and reason with (and about) natural language in different contexts. 
-I mostly identify with <i>natural language processing</i> (ACL, NAACL, EMNLP) and <i>artificial intelligence</i> communities (AAAI, IJCAI) and, to some extent, with the <i>machine learning</i> community (NourIPS, ICML).</p>
+I mostly identify with <i>natural language processing</i> (ACL, NAACL, EMNLP) and <i>artificial intelligence</i> communities (AAAI, IJCAI) and, to some extent, with the <i>machine learning</i> community (NeurIPS, ICML).</p>
 <p>Here are several themes I am interested in: </p>
 <ul>
 <li><p><b>Formulating and tackling broader problems:</b> 
@@ -111,6 +111,13 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>COLD Decoding: Energy-based Constrained Text Generation with Langevin Dynamics</b> <br /> 
+Lianhui Qin, Sean Welleck, Daniel Khashabi and Yejin Choi  <br /> 
+aXiv, 2022 <br /> 
+<a href="https://arxiv.org/abs/2202.11705">Paper</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics</b> <br /> 
 Ximing Lu, Sean Welleck, Peter West, Liwei Jiang, Jungo Kasai, Daniel Khashabi, Ronan Le Bras, Lianhui Qin, Youngjae Yu, Rowan Zellers, Noah A. Smith and Yejin Choi  <br /> 
 aXiv, 2021 <br /> 
@@ -128,7 +135,7 @@ aXiv, 2021 <br />
 <li><p><b>Findings of the 2021 Conference on Machine Translation (WMT21)</b> <br /> 
 Farhad Akhbardeh et al.  <br /> 
 WMT, 2021 <br /> 
-<a href="http://www.statmt.org/wmt21/pdf/2021.wmt-1.1.pdf">Paper</a></p>
+<a href="https://aclanthology.org/2021.wmt-1.1/">Paper</a></p>
 </li>
 </ul>
 <ul>
@@ -365,7 +372,7 @@ AAAI, 2016 <br />
 <ul>
 <li><p><b>Online Learning with Adversarial Delays</b> <br /> 
 Kent Quanrud and Daniel Khashabi <br /> 
-NourIPS, 2015 <br /> 
+NeurIPS, 2015 <br /> 
 <a href="files/2015_delayed_online_learning/2015_delayed_learning.pdf">Paper</a>, <a href="files/2015_delayed_online_learning/delayed-learning-poster-2.pdf">Poster</a><br /> </p>
 </li>
 </ul>
@@ -465,7 +472,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-31 07:18:08 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-24 10:05:47 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
