--- a/index.html
+++ b/index.html
@@ -118,6 +118,20 @@ aXiv, 2022 <br />
 </li>
 </ul>
 <ul>
+<li><p><b>Reframing Instructional Prompts to GPT<i>k</i>'s Language</b> <br /> 
+Swaroop Mishra, Daniel Khashabi, Chitta Baral, Yejin Choi and Hannaneh Hajishirzi <br /> 
+ACL - Findings, 2022 <br /> 
+<a href="https://arxiv.org/abs/2109.07830">Paper</a>, <a href="https://github.com/allenai/reframing">Code</a></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions</b> <br /> 
+Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
+ACL, 2022 <br /> 
+<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="https://github.com/allenai/natural-instructions-expansion/">Data2</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a>, <a href="https://medium.com/ai2-blog/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">Blog</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics</b> <br /> 
 Ximing Lu, Sean Welleck, Peter West, Liwei Jiang, Jungo Kasai, Daniel Khashabi, Ronan Le Bras, Lianhui Qin, Youngjae Yu, Rowan Zellers, Noah A. Smith and Yejin Choi  <br /> 
 aXiv, 2021 <br /> 
@@ -129,13 +143,6 @@ aXiv, 2021 <br />
 Daniel Khashabi, Shane Lyu, Sewon Min, Lianhui Qin, Kyle Richardson, Sameer Singh, Sean Welleck, Hannaneh Hajishirzi, Tushar Khot, Ashish Sabharwal and Yejin Choi  <br /> 
 aXiv, 2021 <br /> 
 <a href="https://arxiv.org/abs/2112.08348">Paper</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Findings of the 2021 Conference on Machine Translation (WMT21)</b> <br /> 
-Farhad Akhbardeh et al.  <br /> 
-WMT, 2021 <br /> 
-<a href="https://aclanthology.org/2021.wmt-1.1/">Paper</a></p>
 </li>
 </ul>
 <ul>
@@ -153,17 +160,10 @@ arXiv, 2021 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>Reframing Instructional Prompts to GPT<i>k</i>'s Language</b> <br /> 
-Swaroop Mishra, Daniel Khashabi, Chitta Baral, Yejin Choi and Hannaneh Hajishirzi <br /> 
-arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2109.07830">Paper</a>, <a href="https://github.com/allenai/reframing">Code</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions</b> <br /> 
-Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
-arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="https://github.com/allenai/natural-instructions-expansion/">Data2</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a>, <a href="https://medium.com/ai2-blog/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">Blog</a></p>
+<li><p><b>Findings of the 2021 Conference on Machine Translation (WMT21)</b> <br /> 
+Farhad Akhbardeh et al.  <br /> 
+WMT, 2021 <br /> 
+<a href="https://aclanthology.org/2021.wmt-1.1/">Paper</a></p>
 </li>
 </ul>
 <ul>
@@ -472,7 +472,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-24 10:05:47 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-24 10:07:14 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
