--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@ aXiv, 2022 <br />
 </li>
 </ul>
 <ul>
+<li><p><b>UnifiedQA-v2</b> <br /> 
+Daniel Khashabi, Yeganeh Kordi and Hannaneh Hajishirzi  <br /> 
+aXiv, 2022 <br /> 
+<a href="https://arxiv.org/abs/2202.12359">Paper</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Reframing Instructional Prompts to GPT<i>k</i>'s Language</b> <br /> 
 Swaroop Mishra, Daniel Khashabi, Chitta Baral, Yejin Choi and Hannaneh Hajishirzi <br /> 
 ACL - Findings, 2022 <br /> 
@@ -472,7 +479,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-24 10:07:14 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-27 17:34:35 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
